# minecraft-holodeck

./: .gitignore  PLAN.md  README.md  pyproject.toml
scripts/: README.md  build_village_example.sh  cabin_build.py  cabin_build.txt  cabin_build_relative.txt  create_world_examples.py
src/minecraft_holodeck/: __init__.py  api.py  cli.py  constants.py  converter.py  exceptions.py  placer.py
src/minecraft_holodeck/parser/: __init__.py  ast.py  grammar.lark  parser.py  transformer.py
src/minecraft_holodeck/world/: __init__.py  block_converter.py  creation.py  modifier.py
tests/: test_placer.py
tests/parser/: test_parser.py
tests/world/: test_creation.py
